second working version of st uniform cost search

--- a/vjezbanje/CMakeLists.txt
+++ b/vjezbanje/CMakeLists.txt
@@ -4,4 +4,4 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 
 
-add_executable(umjint.vjezbanje.main main.cpp node.cpp map_loader.cpp general_search_algorithm.cpp uniform_cost_search.cpp ST_uniform_cost_search.cpp)
+add_executable(umjint.vjezbanje.main main.cpp general_search_algorithm.cpp ST_uniform_cost_search.cpp node.cpp map_loader.cpp)# node.cpp map_loader.cpp general_search_algorithm.cpp uniform_cost_search.cpp ST_uniform_cost_search.cpp)
